Skip to content

Win32: mouse cursor hidden in the video window does not reappear on right click context menu open

vlc-1.1.0-rc, xp x86 sp3

  1. play video

  2. position the cursor inside the video window, wait a few sec till it's hidden

  3. without moving the mouse, right click on the video (may require 2 clicks)

  4. context menu opens, but the cursor stays hidden, even when you move it down the menu

Edited by Jean-Baptiste Kempf
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information